chore: run build on pre-push hook
Resolves #83 by runing `npm run build` on the pre-push hook.
Added `npm run build -ws` to the parent package script to make it easier to build
the whole workspace.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "create": "plop --plopfile scripts/create.js",
     "eslint": "eslint {packages/**/{src,test}/**/*.{js,jsx},scripts/*.{js,jsx}}",
+    "build": "npm run build -ws",
     "github:page": "npm run github:page --ws --if-present && vite build && node scripts/prepare-deployment.js",
     "start": " vite --host --port 4200 --open",
     "outdated": "npm outdated",
