chore: add multi-target build system with run-all helper
Introduces a complete multi-target build system across the template and packages, simplifying and
standardizing builds with multiple outputs.

Changes include:

- Updated `create` template:
  - Added `.build.config.js` defining the default build and instructions for adding new targets.
  - `vite.config.lib.js` and `vite.config.umd.js` now dynamically import the current build target
    from `.build.config.js` via the `BUILD_TARGET` environment variable.
  - The template now ships with multi-output builds by default.

- Added `npm-run-all` and `rimraf` helper scripts to reduce boilerplate in `package.json`.

- Updated packages to use the new system:
  - `pillarbox-playlist` and `google-cast-sender` plugins now supports multi-output builds.
  - All package `build` scripts now leverage the helper script to ensure consistency.

--- a/packages/airplay-button/package.json
+++ b/packages/airplay-button/package.json
@@ -33,7 +33,8 @@
     "player"
   ],
   "scripts": {
-    "build": "npm run build:lib && npm run build:umd && npm run build:css",
+    "clean": "rimraf dist",
+    "build": "npm-run-all clean build:*",
     "build:css": "sass ./scss/airplay-button.scss:dist/airplay-button.min.css --style compressed --source-map --load-path node_modules",
     "build:lib": "vite build --config vite.config.lib.js",
     "build:umd": "vite build --config vite.config.umd.js",
