--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
     "node-plop": "^0.32.0",
+    "npm-run-all": "^4.1.5",
     "plop": "^4.0.1",
+    "rimraf": "^6.0.1",
     "rollup-plugin-copy": "^3.5.0",
     "sass": "^1.87.0",
     "semantic-release": "^23.1.1",
@@ -63,8 +65,8 @@
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-order": "^6.0.4  ",
+    "video.js": "8.21.0",
     "vite": "^6.3.5",
-    "vitest": "^3.1.2",
-    "video.js": "8.21.0"
+    "vitest": "^3.1.2"
   }
 }
