--- a/packages/brand-button/package.json
+++ b/packages/brand-button/package.json
@@ -32,7 +32,8 @@
     "player"
   ],
   "scripts": {
-    "build": "npm run build:lib && npm run build:umd && npm run build:css",
+    "clean": "rimraf dist",
+    "build": "npm-run-all clean build:*",
     "build:css": "sass ./scss/brand-button.scss:dist/brand-button.min.css --style compressed --source-map --load-path node_modules",
     "build:lib": "vite build --config vite.config.lib.js",
     "build:umd": "vite build --config vite.config.umd.js",
