--- a/packages/google-cast-sender/package.json
+++ b/packages/google-cast-sender/package.json
@@ -42,12 +42,13 @@
     "TV"
   ],
   "scripts": {
-    "build": "npm run build:lib && npm run build:umd && npm run build:css",
+    "clean": "rimraf dist",
+    "build": "npm-run-all clean build:*",
     "build:css": "sass ./scss/google-cast-sender.scss:dist/google-cast-sender.min.css --style compressed --source-map --load-path node_modules",
-    "build:lib:sender": "BUILD_TARGET=sender vite build --config vite.config.lib.js",
+    "build:lib:sender": "vite build --config vite.config.lib.js",
     "build:lib:button": "BUILD_TARGET=button vite build --config vite.config.lib.js",
     "build:lib": "npm run build:lib:sender && npm run build:lib:button",
-    "build:umd:sender": "BUILD_TARGET=sender vite build --config vite.config.umd.js",
+    "build:umd:sender": "vite build --config vite.config.umd.js",
     "build:umd:button": "BUILD_TARGET=button vite build --config vite.config.umd.js",
     "build:umd": "npm run build:umd:sender && npm run build:umd:button",
     "github:page": "vite build",
