--- a/packages/web-suite-utils/package.json
+++ b/packages/web-suite-utils/package.json
@@ -30,7 +30,8 @@
     "player"
   ],
   "scripts": {
-    "build": "npm run build:lib && npm run build:umd",
+    "clean": "rimraf dist",
+    "build": "npm-run-all clean build:*",
     "build:lib": "vite build --config vite.config.lib.js",
     "build:umd": "vite build --config vite.config.umd.js",
     "release:ci": "semantic-release",
