--- a/packages/pillarbox-playlist/package.json
+++ b/packages/pillarbox-playlist/package.json
@@ -51,6 +51,9 @@
     "start": " vite --port 4200 --open",
     "test": "vitest run --silent --coverage --coverage.reporter text"
   },
+  "dependencies": {
+    "@srgssr/svg-button": "^1.1.0"
+  },
   "peerDependencies": {
     "video.js": "^8.0.0"
   },
