feat(pillarbox-playlist): use card button as base for playlist menu items
Resolves #80 by refactoring the implementation of the `PillarboxPlaylistMenuItem` to extend the new
`CardButton` component.

This change introduces a visual update to the playlist menu:

- Thumbnails are now displayed alongside playlist items in the menu dialog.
- Styles have been adjusted to match the `CardButton` layout.

--- a/packages/pillarbox-playlist/package.json
+++ b/packages/pillarbox-playlist/package.json
@@ -53,7 +53,8 @@
     "test": "vitest run --silent --coverage --coverage.reporter text"
   },
   "dependencies": {
-    "@srgssr/svg-button": "^1.1.0"
+    "@srgssr/svg-button": "^1.1.0",
+    "@srgssr/card": "^1.0.0"
   },
   "peerDependencies": {
     "video.js": "^8.0.0"
