--- a/assets/extensions.json
+++ b/assets/extensions.json
@@ -46,5 +46,9 @@
   {
     "name": "google-cast-sender",
     "description": "A Chromecast plugin that supports supports subtitle and audio track selection, live streams with DVR capabilities and custom source resolution."
+  },
+  {
+    "name": "chapter-navigation",
+    "description": "Displays a component that allows you to navigate through the list of chapters."
   }
 ]
