--- a/packages/legacy-chapters-navigation/package.json
+++ b/packages/legacy-chapters-navigation/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@srgssr/chapter-navigation",
+  "name": "@srgssr/legacy-chapters-navigation",
   "version": "0.0.1",
   "license": "MIT",
   "author": "SRG SSR",
@@ -10,16 +10,16 @@
   "publishConfig": {
     "access": "public"
   },
-  "homepage": "https://github.com/SRGSSR/pillarbox-web-suite/tree/main/packages/chapter-navigation#readme",
+  "homepage": "https://github.com/SRGSSR/pillarbox-web-suite/tree/main/packages/legacy-chapters-navigation#readme",
   "type": "module",
-  "main": "dist/chapter-navigation.cjs",
-  "browser": "dist/chapter-navigation.umd.min.js",
-  "module": "dist/chapter-navigation.js",
-  "style": "./dist/chapter-navigation.min.css",
+  "main": "dist/legacy-chapters-navigation.cjs",
+  "browser": "dist/legacy-chapters-navigation.umd.min.js",
+  "module": "dist/legacy-chapters-navigation.js",
+  "style": "./dist/legacy-chapters-navigation.min.css",
   "exports": {
     ".": {
-      "import": "./dist/chapter-navigation.js",
-      "require": "./dist/chapter-navigation.cjs"
+      "import": "./dist/legacy-chapters-navigation.js",
+      "require": "./dist/legacy-chapters-navigation.cjs"
     },
     "./*": "./*"
   },
@@ -35,7 +35,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "npm-run-all clean build:*",
-    "build:css": "sass ./scss/chapter-navigation.scss:dist/chapter-navigation.min.css --style compressed --source-map --load-path node_modules",
+    "build:css": "sass ./scss/legacy-chapters-navigation.scss:dist/legacy-chapters-navigation.min.css --style compressed --source-map --load-path node_modules",
     "build:lib": "vite build --config vite.config.lib.js",
     "build:umd": "vite build --config vite.config.umd.js",
     "github:page": "vite build",
