feat: add legacy chapters navigation component

--- a/assets/extensions.json
+++ b/assets/extensions.json
@@ -54,5 +54,9 @@
   {
     "name": "chapter-navigation",
     "description": "Displays a component that allows you to navigate through the list of chapters."
+  },
+  {
+    "name": "legacy-chapters-navigation",
+    "description": "Displays a component that allows to navigate through the list of chapters."
   }
 ]
