--- a/assets/extensions.json
+++ b/assets/extensions.json
@@ -46,5 +46,9 @@
   {
     "name": "google-cast-sender",
     "description": "A Chromecast plugin that supports supports subtitle and audio track selection, live streams with DVR capabilities and custom source resolution."
+  },
+  {
+    "name": "countdown-display",
+    "description": "A component for presenting a countdown overlay that leads into a playback transition."
   }
 ]
